--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -13,7 +13,7 @@
 \usepackage{multirow}
 \usepackage{multicol}
 \usepackage{bussproofs}
-\usetikzlibrary{positioning,calc,graphs}
+\usetikzlibrary{positioning,calc,graphs,shapes,arrows}
 
 \setlength{\grammarindent}{8em}
 
@@ -109,6 +109,10 @@
 
 \newacronym{pmpcfg}{pmpcfg}{phsyical memory protection configuration}
 \newacronym{pmacfg}{pmacfg}{phsyical memory attributes configuration}
+
+\tikzstyle{decision} = [diamond, draw, text width=4.5em, text badly centered, inner sep=0pt]
+\tikzstyle{block} = [rectangle, draw, text width=12em, text centered, rounded corners, minimum height=4em]
+\tikzstyle{line} = [draw, -latex']
 
 \sloppy
 
